--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="about_text_label">Umpire Buddy by Dustin Klein</string>
     <string name="about">About</string>
     <string name="reset_count">Reset Count</string>
+    <string name="outs_label_text">Outs: %1$d</string>
 </resources>
